force-app/main/default/objects/Lead/fields/Allergies_Sensitivities_or_Reactions__c.field-meta.xml
<CustomField>
    <fullName>Allergies_Sensitivities_or_Reactions__c</fullName>
    <label>Allergies Sensitivities or Reactions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>