force-app/main/default/objects/Lead/fields/Allergies_Sensitivities_or_Reactions_Det__c.field-meta.xml
<CustomField>
    <fullName>Allergies_Sensitivities_or_Reactions_Det__c</fullName>
    <label>Allergies Sensitivities Reactions Detail</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>