force-app/main/default/objects/Lead/fields/Already_Has_WWC__c.field-meta.xml
<CustomField>
    <fullName>Already_Has_WWC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already Has WWC</label>
    <type>Checkbox</type>
</CustomField>