force-app/main/default/objects/Lead/fields/Application_By__c.field-meta.xml
<CustomField>
    <fullName>Application_By__c</fullName>
    <defaultValue>&apos;Parent/Guardian&apos;</defaultValue>
    <label>Application By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Social Worker</fullName>
            </value>
            <value>
                <fullName>Health Professional</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>carer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>