force-app/main/default/objects/Lead/fields/Ask_2__c.field-meta.xml
<CustomField>
    <fullName>Ask_2__c</fullName>
    <label>Ask 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>