force-app/main/default/objects/Lead/fields/Ask_3__c.field-meta.xml
<CustomField>
    <fullName>Ask_3__c</fullName>
    <label>Ask 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>