force-app/main/default/objects/Lead/fields/Can_Lead_Converted__c.field-meta.xml
<CustomField>
    <fullName>Can_Lead_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In some scenarios, lead should not be converted and therefore hide the Convert button. This field would be set by a screen flow on Lead record.</description>
    <inlineHelpText>In some scenarios, lead should not be converted and therefore hide the Convert button. This field would be set by a screen flow on Lead record.</inlineHelpText>
    <label>Can Lead Converted</label>
    <type>Checkbox</type>
</CustomField>