force-app/main/default/objects/Lead/fields/Child_1_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Birth_Date__c</fullName>
    <label>Child 1 Birth Date</label>
    <type>Date</type>
</CustomField>