force-app/main/default/objects/Lead/fields/Child_1_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For when Patient Bereaved families sign up and patient has already passed.</description>
    <label>Child 1 Deceased?</label>
    <type>Checkbox</type>
</CustomField>