force-app/main/default/objects/Lead/fields/Child_1_Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Deceased_Date__c</fullName>
    <description>If Deceased, add date for records.</description>
    <label>Child 1 Deceased Date</label>
    <type>Date</type>
</CustomField>