force-app/main/default/objects/Lead/fields/Child_1_Family_Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Family_Member_Type__c</fullName>
    <formula>IF(Child_1_Has_Cancer__c = TRUE, &quot;Patient&quot;, &quot;Sibling&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child 1 Family Member Type</label>
    <type>Text</type>
</CustomField>