force-app/main/default/objects/Lead/fields/Child_1_Has_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Has_Cancer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child 1 Has Cancer</label>
    <type>Checkbox</type>
</CustomField>