force-app/main/default/objects/Lead/fields/Child_1_School_Validated__c.field-meta.xml
<CustomField>
    <fullName>Child_1_School_Validated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child 1 School Validated</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>School</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>