force-app/main/default/objects/Lead/fields/Child_2_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Birth_Date__c</fullName>
    <label>Child 2 Birth Date</label>
    <type>Date</type>
</CustomField>