force-app/main/default/objects/Lead/fields/Child_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_2_First_Name__c</fullName>
    <label>Child 2 First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>