force-app/main/default/objects/Lead/fields/Child_2_Has_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Has_Cancer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child 2 Has Cancer</label>
    <type>Checkbox</type>
</CustomField>