force-app/main/default/objects/Lead/fields/Child_2_Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Special_Needs__c</fullName>
    <label>Child 2 Special Needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>