force-app/main/default/objects/Lead/fields/Child_3_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_3_Birth_Date__c</fullName>
    <label>Child 3 Birth Date</label>
    <type>Date</type>
</CustomField>