force-app/main/default/objects/Lead/fields/Child_3_School_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_3_School_Name__c</fullName>
    <label>Child 3 School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>