force-app/main/default/objects/Lead/fields/Child_3_School_Validated__c.field-meta.xml
<CustomField>
    <fullName>Child_3_School_Validated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child 3 School Validated</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>School</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Child 3 School Validated)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>