force-app/main/default/objects/Lead/fields/CLT_Supported__c.field-meta.xml
<CustomField>
    <fullName>CLT_Supported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CLT Supported</label>
    <type>Checkbox</type>
</CustomField>