force-app/main/default/objects/Lead/fields/Code_Of_Conduct_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Code_Of_Conduct_Completed_Date__c</fullName>
    <label>Code Of Conduct Completed Date</label>
    <type>Date</type>
</CustomField>