force-app/main/default/objects/Lead/fields/Code_Of_Conduct_v2018__c.field-meta.xml
<CustomField>
    <fullName>Code_Of_Conduct_v2018__c</fullName>
    <inlineHelpText>This shows signing of the 2018 version of the Volunteer code of conduct.</inlineHelpText>
    <label>Code Of Conduct v2018</label>
    <type>Date</type>
</CustomField>