force-app/main/default/objects/Lead/fields/Criminal_Convictions__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Convictions__c</fullName>
    <label>Criminal Convictions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>