force-app/main/default/objects/Lead/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>AML</fullName>
            </value>
            <value>
                <fullName>APML</fullName>
            </value>
            <value>
                <fullName>Astrocytoma</fullName>
            </value>
            <value>
                <fullName>Bowel Cancer</fullName>
            </value>
            <value>
                <fullName>Brain Tumour</fullName>
            </value>
            <value>
                <fullName>Breast Cancer</fullName>
            </value>
            <value>
                <fullName>Cervical Cancer</fullName>
            </value>
            <value>
                <fullName>CML</fullName>
            </value>
            <value>
                <fullName>Congenital Leukemia</fullName>
            </value>
            <value>
                <fullName>Ependymoma</fullName>
            </value>
            <value>
                <fullName>Ewings Sarcoma</fullName>
            </value>
            <value>
                <fullName>Germ Cell Tumour</fullName>
            </value>
            <value>
                <fullName>Glioma</fullName>
            </value>
            <value>
                <fullName>Haemophagystic Syndrome</fullName>
            </value>
            <value>
                <fullName>Hepatoblastoma</fullName>
            </value>
            <value>
                <fullName>Hodgkins Lymphoma</fullName>
            </value>
            <value>
                <fullName>JMML</fullName>
            </value>
            <value>
                <fullName>Juvenile MLD</fullName>
            </value>
            <value>
                <fullName>Langerhans Cell Histio</fullName>
            </value>
            <value>
                <fullName>Lymphoma</fullName>
            </value>
            <value>
                <fullName>Medulloblastoma</fullName>
            </value>
            <value>
                <fullName>Melanoma</fullName>
            </value>
            <value>
                <fullName>Mixed phenotype acute leukemia (MPAL)</fullName>
            </value>
            <value>
                <fullName>Myeldomyplasta</fullName>
            </value>
            <value>
                <fullName>Neuroblastoma</fullName>
            </value>
            <value>
                <fullName>Neuro ectodermal tumour</fullName>
            </value>
            <value>
                <fullName>Non-Hodgkin&apos;s Lymphoma</fullName>
            </value>
            <value>
                <fullName>Osteogenic Sarcoma</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>