force-app/main/default/objects/Lead/fields/Diagnosis_Info_Errors__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Info_Errors__c</fullName>
    <formula>if( isblank(Diagnosis_Date__c), &quot;Diagnosis Date Blank&quot;,&quot;&quot;)&amp;  if( isblank(text(Diagnosis__c)), &quot;Diagnosis Blank&quot;,&quot;&quot;) &amp; if(isblank(text( Hospital__c)),&quot;Hospital Blank&quot;,&quot;&quot;) &amp; IF (text(Diagnosis__c) = &quot;Other&quot; ,&quot;Other Diagnosis - Please confirm family eligibility.&quot;,&quot;&quot;)</formula>
    <label>Diagnosis Info Errors</label>
    <type>Text</type>
</CustomField>