force-app/main/default/objects/Lead/fields/Diagnosis_Other__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Other__c</fullName>
    <label>Diagnosis Details</label>
    <type>TextArea</type>
</CustomField>