force-app/main/default/objects/Lead/fields/Disqualified_Note__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Note__c</fullName>
    <inlineHelpText>Message received from Lead</inlineHelpText>
    <label>Disqualified Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>