force-app/main/default/objects/Lead/fields/Do_Not_Add_AP__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Add_AP__c</fullName>
    <formula>True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Add AP</label>
    <type>Checkbox</type>
</CustomField>