force-app/main/default/objects/Lead/fields/Experience_with_high_needs_children__c.field-meta.xml
<CustomField>
    <fullName>Experience_with_high_needs_children__c</fullName>
    <description>Do you have experience with children with high needs (e.g. physical disabilities, Autism Spectrum Disorder, ADD, ADHD)?</description>
    <inlineHelpText>Do you have experience with children with high needs (e.g. physical disabilities, Autism Spectrum Disorder, ADD, ADHD)?</inlineHelpText>
    <label>Experience with high needs children</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>