force-app/main/default/objects/Lead/fields/External_URN__c.field-meta.xml
<CustomField>
    <fullName>External_URN__c</fullName>
    <description>URN provide by 3rd Party</description>
    <externalId>true</externalId>
    <label>External URN</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>