force-app/main/default/objects/Lead/fields/Extra_Children__c.field-meta.xml
<CustomField>
    <fullName>Extra_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extra Children</label>
    <type>Checkbox</type>
</CustomField>