force-app/main/default/objects/Lead/fields/Family_Contact_Details_Provided__c.field-meta.xml
<CustomField>
    <fullName>Family_Contact_Details_Provided__c</fullName>
    <formula>and(  NOT(isblank(Parent_1_Suburb__c)), NOT(isblank(Parent_1_Street__c)), NOT(isblank(text(Parent_1_State__c))), NOT(isblank( Parent_1_Post_Code__c )), OR( NOT(isblank( Parent_1_Home_Phone__c )), NOT(isblank( Parent_1_Mobile__c )),NOT(isblank( Parent_1_Email__c )) ))</formula>
    <label>Family Contact Details Provided</label>
    <type>Checkbox</type>
</CustomField>