force-app/main/default/objects/Lead/fields/Family_Type__c.field-meta.xml
<CustomField>
    <fullName>Family_Type__c</fullName>
    <formula>if( text(Reason_for_Joining__c) = &quot;Child with Cancer&quot;, &quot;Patient&quot;,
if( OR(text(Reason_for_Joining__c) = &quot;Parent or primary carer with cancer&quot;, text(Reason_for_Joining__c) = &quot;Parent with Cancer&quot;), &quot;Offspring Family&quot;,
if( text(Reason_for_Joining__c) = &quot;Child passed away due to cancer&quot;, &quot;Bereaved Family&quot;,
if( text(Reason_for_Joining__c) = &quot;Parent passed away due to cancer&quot;, &quot;Offspring Bereaved Family&quot;,
&quot;Patient&quot;

))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Type</label>
    <type>Text</type>
</CustomField>