force-app/main/default/objects/Lead/fields/Hard_copy_brochure_to_be_posted__c.field-meta.xml
<CustomField>
    <fullName>Hard_copy_brochure_to_be_posted__c</fullName>
    <inlineHelpText>Update to yes if bequestor would like a hard copy brochure mailed to them</inlineHelpText>
    <label>Hard copy brochure to be posted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>