force-app/main/default/objects/Lead/fields/Has_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Has_Cancer__c</fullName>
    <description>Does any of child has cancer ?</description>
    <formula>IF( 
    Child_1_Has_Cancer__c,
    &apos;Yes&apos;,
    IF(
        Child_2_Has_Cancer__c,
        &apos;Yes&apos;,
        IF(
            Child_3_Has_Cancer__c,
            &apos;Yes&apos;,
            IF(
                Child_4_Has_Cancer__c,
                &apos;Yes&apos;,
                &apos;No&apos;
            )
        )
    )
)</formula>
    <inlineHelpText>Does any of child has cancer ?</inlineHelpText>
    <label>Has Cancer</label>
    <type>Text</type>
</CustomField>