force-app/main/default/objects/Lead/fields/Has_Child_Under_14__c.field-meta.xml
<CustomField>
    <fullName>Has_Child_Under_14__c</fullName>
    <formula>OR( if(AND(YEAR( TODAY() ) - Year(Child_1_Birth_Date__c )&lt;16,  NOT(ISBLANK(Child_1_Birth_Date__c)))  ,true,false),
if(AND(YEAR( TODAY() ) - Year(Child_2_Birth_Date__c )&lt;16,  NOT(ISBLANK(Child_2_Birth_Date__c)))  ,true,false),
if(AND(YEAR( TODAY() ) - Year(Child_3_Birth_Date__c )&lt;16,  NOT(ISBLANK(Child_3_Birth_Date__c)))  ,true,false),
if(AND(YEAR( TODAY() ) - Year(Child_4_Birth_Date__c )&lt;16,  NOT(ISBLANK(Child_4_Birth_Date__c)))  ,true,false))</formula>
    <label>Has Child Under 16</label>
    <type>Checkbox</type>
</CustomField>