force-app/main/default/objects/Lead/fields/Has_Valid_Branch_And_Region__c.field-meta.xml
<CustomField>
    <fullName>Has_Valid_Branch_And_Region__c</fullName>
    <formula>AND( NOT(ISBLANK(TEXT(  Region__c  ))),NOT(ISBLANK(TEXT(  Office__c ))))</formula>
    <label>Has Valid Branch And Region</label>
    <type>Checkbox</type>
</CustomField>