force-app/main/default/objects/Lead/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <label>Hospital</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Women&apos;s and Children&apos;s Hospital</fullName>
                <label>Adelaide Women&apos;s &amp; Children&apos;s Hospitals</label>
            </value>
            <value>
                <fullName>Alfred Hospital</fullName>
            </value>
            <value>
                <fullName>Armidale and New England Hospital</fullName>
            </value>
            <value>
                <fullName>Bankstown Hospital</fullName>
            </value>
            <value>
                <fullName>Barwon Health</fullName>
            </value>
            <value>
                <fullName>Bundaberg Base Hospital</fullName>
            </value>
            <value>
                <fullName>Cabrini Hospital</fullName>
            </value>
            <value>
                <fullName>Cairns Base Hospital</fullName>
            </value>
            <value>
                <fullName>Calvary Mater Hospital</fullName>
            </value>
            <value>
                <fullName>Campbelltown Hospital</fullName>
            </value>
            <value>
                <fullName>Canberra Hospital</fullName>
            </value>
            <value>
                <fullName>Children&apos;s Hospital at Westmead</fullName>
            </value>
            <value>
                <fullName>Coffs Harbour Health Campus</fullName>
            </value>
            <value>
                <fullName>Fiona Stanley Hospital</fullName>
            </value>
            <value>
                <fullName>Flinders Medical Centre</fullName>
            </value>
            <value>
                <fullName>Gladstone Hospital</fullName>
            </value>
            <value>
                <fullName>Gold Coast Hospital</fullName>
            </value>
            <value>
                <fullName>John Hunter Childrens Hospital</fullName>
                <label>John Hunter Children&apos;s Hospital</label>
            </value>
            <value>
                <fullName>Lady Cilento Children&apos;s Hospital</fullName>
            </value>
            <value>
                <fullName>Launceston General Hospital</fullName>
            </value>
            <value>
                <fullName>Lismore Base Hospital</fullName>
            </value>
            <value>
                <fullName>Lyell McEwin Hospital</fullName>
            </value>
            <value>
                <fullName>Mackay Base Hospital</fullName>
            </value>
            <value>
                <fullName>Mater Childrens Hospital</fullName>
            </value>
            <value>
                <fullName>Monash Children&apos;s Hospital Melbourne</fullName>
            </value>
            <value>
                <fullName>Monash Medical Centre</fullName>
            </value>
            <value>
                <fullName>Nambour Hospital</fullName>
            </value>
            <value>
                <fullName>North West Regional Hospital</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PA Hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>